# orin-nx-project

./: .gitignore  AGENTS.md  README.md  orin nx 项目口播模板.txt  requirements.txt
docs/: backend_decision_table_2026-07-24.md  baseline_boundary_review_2026-07-14.md  challenge_boundary_report_2026-07-18.md  commit_scope_2026-07-18.md  commit_scope_2026-07-20.md  cuda_affine_mmapi_diagnostic_2026-07-24.md  cuda_double_surface_debug_2026-07-24.md  cuda_dynamic_warp_probe_2026-07-23.md  cuda_mmapi_interop_safety_verifier_2026-07-24.md  cuda_mmapi_official_verifier_2026-07-24.md  cuda_mmapi_route_recovery_2026-07-24.md  device_matrix_warp_demo_2026-07-19.md  device_stage_demo_handoff_2026-07-19.md  device_stage_endurance_50run_2026-07-24.md  device_stage_lifecycle_budget_2026-07-23.md  device_stage_lifecycle_dataflow_v2_2026-07-23.md  device_stage_lifecycle_perf_result_2026-07-23.md  device_stage_profile_methodology_2026-07-23.md  device_stage_stability_p99_repeat_2026-07-24.md  eis_loop_boundary_plan_2026-07-17.md  evaluation_system_v1.md  evidence_map_2026-07-18.md  evidence_reader_path.md  future_extensions_2026-07-18.md  gstreamer_nvmm_latency_plan_2026-07-18.md  harness_engineering_v1.md  harness_loop_anti_retreat_review_2026-07-18.md  hybrid_realtime_eis_plan_2026-07-19.md  hybrid_realtime_matrix_handoff_2026-07-19.md  layered_artifact_diagnosis_2026-07-19.md  local_warp_quality_bridge_2026-07-23.md  loop_engineering_v2.md  next_stage_evidence_summary_2026-07-18.md  next_stage_execution_plan_2026-07-18.md  (+54 more)
experiments/vpi_cuda_mem_warp/: CMakeLists.txt  main.cpp
(+199 files in other folders)
